gc homework